--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,40 @@
 asgiref==3.2.10
 astroid==2.4.2
 autopep8==1.5.4
+certifi==2020.11.8
+cffi==1.14.4
+chardet==3.0.4
 colorama==0.4.4
+cryptography==3.2.1
+defusedxml==0.7.0rc1
 Django==3.1.2
 django-ckeditor==6.0.0
 django-cleanup==5.1.0
 django-js-asset==1.2.2
+django-pwa==1.0.10
+djangorestframework==3.12.2
+idna==2.10
 isort==5.6.4
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+oauthlib==3.1.0
 Pillow==8.0.1
 pycodestyle==2.6.0
+pycparser==2.20
+PyJWT==1.7.1
 pylint==2.6.0
+python-dotenv==0.15.0
+python-social-auth==0.3.6
+python3-openid==3.2.0
 pytz==2020.1
+requests==2.25.0
+requests-oauthlib==1.3.0
 six==1.15.0
+social-auth-app-django==4.0.0
+social-auth-core==3.3.3
 sqlparse==0.4.1
 toml==0.10.1
+urllib3==1.26.2
 wrapt==1.12.1
